<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/rootlayoutpaddleright"
        android:paddingRight="@dimen/rootlayoutpaddleright"
        android:paddingTop="@dimen/rootlayoutpaddtop">


        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txtinputmarginbottomtop"
            android:layout_marginTop="@dimen/txtinputmarginbottomtop">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:singleLine="true"
                android:textSize="@dimen/inputtxtsize" />
        </android.support.design.widget.TextInputLayout>


        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txtinputmarginbottomtop"
            android:layout_marginTop="@dimen/txtinputmarginbottomtop">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@_."
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="45"
                android:singleLine="true"
                android:textSize="@dimen/inputtxtsize" />
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txtinputmarginbottomtop"
            android:layout_marginTop="@dimen/txtinputmarginbottomtop">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="40"
                android:singleLine="true"
                android:textSize="@dimen/inputtxtsize" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnImageSelect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnheight"
                android:layout_marginTop="@dimen/signupbtnmargintopbotom"
                android:text="@string/chooseimage"
                android:textSize="@dimen/btntextsize" />


            <ImageView
                android:id="@+id/ivselectedImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>


        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btnheight"
            android:layout_marginBottom="@dimen/signupbtnmargintopbotom"
            android:layout_marginTop="@dimen/signupbtnmargintopbotom"
            android:text="@string/createaccount"
            android:textSize="@dimen/btntextsize" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/signupbtnmargintopbotom"
            android:gravity="center"
            android:text="@string/alreadymember"
            android:textColor="@color/white"
            android:textSize="@dimen/inputtxtsize" />

    </LinearLayout>
</ScrollView>